--- a/puppet/modules/slave/templates/test_pull_requests_smart_proxy.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_smart_proxy.json.erb
@@ -5,7 +5,7 @@
   "jenkins_url": "http://ci.theforeman.org/",
   "hub_config": "~/.config/hub",
   "github_user": "theforeman",
-  "bot_github_user": "<%= github_user -%>",
+  "bot_github_user": "<%= @github_user -%>",
   "irc_channel": "#theforeman-dev",
   "not_mergable_cache": "~/pr_tests/cache/test_pull_request_smart_proxy_not_mergable",
   "repo_groups": {},
@@ -19,7 +19,7 @@
         "*": {
           "jenkins_job_name": "test_proxy_develop_pull_request",
           "downstream_job_name": "test_proxy_develop",
-          "build_token": "<%= jenkins_build_token -%>"
+          "build_token": "<%= @jenkins_build_token -%>"
         }
       },
       "repo_to_orgs": {
