--- a/puppet/modules/slave/templates/test_pull_requests_foreman_expire_hosts.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_expire_hosts.json.erb
@@ -5,7 +5,7 @@
     "jenkins_url": "http://ci.theforeman.org/",
     "hub_config": "~/.config/hub",
     "github_user": "theforeman",
-    "bot_github_user": "<%= github_user -%>",
+    "bot_github_user": "<%= @github_user -%>",
     "irc_channel": "#theforeman-dev",
     "not_mergable_cache": "~/pr_tests/cache/test_pull_request_foreman_expire_hosts_not_mergable",
     "repo_groups": {
@@ -21,7 +21,7 @@
                 "*": {
                     "jenkins_job_name": "test_plugin_pull_request",
                     "downstream_job_name": "test_plugin_foreman_expire_hosts_master",
-                    "build_token": "<%= jenkins_build_token -%>",
+                    "build_token": "<%= @jenkins_build_token -%>",
                     "addtl_jenkins_params": {
                         "foreman_expire_hosts": {
                             "plugin_repo": "https://github.com/theforeman/foreman_expire_hosts.git",
