de-stringify booleans

--- a/puppet/modules/rbot/templates/conf.yaml.erb
+++ b/puppet/modules/rbot/templates/conf.yaml.erb
@@ -1,5 +1,5 @@
---- 
-plugins.path: 
+---
+plugins.path:
 <% scope.lookupvar('rbot::plugin_dir').each do |dir| -%>
 <% next if dir == '' -%>
 - <%= dir %>
@@ -9,19 +9,19 @@ core.db: tc
 core.address_prefix:
 - "<%= scope.lookupvar('rbot::address_prefix') %>"
 irc.nick: <%= scope.lookupvar('rbot::nickname') %>
-server.list: 
+server.list:
 <% scope.lookupvar('rbot::servers').each do |server| -%>
 - irc://<%= server %>
 <% end -%>
 auth.password: <%= scope.lookupvar('rbot::auth_password') %>
-irc.join_channels: 
+irc.join_channels:
 <% scope.lookupvar('rbot::channels').each do |channel| -%>
 - "<%= channel %>"
 <% end -%>
-<% if scope.lookupvar('rbot::ssl') == 'true' -%>
+<% if scope.lookupvar('rbot::ssl') == true -%>
 server.ssl: true
 <% end -%>
-<% if scope.lookupvar('rbot::reply_with_nick') == 'true' -%>
+<% if scope.lookupvar('rbot::reply_with_nick') == true -%>
 core.reply_with_nick: true
 <% end -%>
 <% if scope.lookupvar('rbot::irc_password') != '' -%>
