Use generic defaults for Redmine

--- a/puppet/modules/redmine/templates/secure_config.yaml.erb
+++ b/puppet/modules/redmine/templates/secure_config.yaml.erb
@@ -1,3 +1,4 @@
 # Config not suitable for storing in git://theforeman/redmine
 secret_token: <%= @secret_token %>
 email_password: <%= @email_password %>
+data_dir: <%= @data_dir %>
