--- a/puppet/modules/web/templates/web.conf.erb
+++ b/puppet/modules/web/templates/web.conf.erb
@@ -1,8 +1,8 @@
 RewriteEngine on
-RewriteRule   ^/projects(.*)  http://projects.theforeman.org/projects$1  [R,L]
-RewriteRule   ^/issues(.*)  http://projects.theforeman.org/issues$1  [R,L]
-RewriteRule   ^/versions(.*)  http://projects.theforeman.org/versions$1  [R,L]
-RewriteRule   ^/wiki(.*)  http://projects.theforeman.org/wiki$1  [R,L]
+RewriteRule   ^/projects(.*)  https://projects.theforeman.org/projects$1  [R,L]
+RewriteRule   ^/issues(.*)  https://projects.theforeman.org/issues$1  [R,L]
+RewriteRule   ^/versions(.*)  https://projects.theforeman.org/versions$1  [R,L]
+RewriteRule   ^/wiki(.*)  https://projects.theforeman.org/wiki$1  [R,L]
 
 <% if @https -%>
 RewriteCond   %{HTTPS} !=on
