--- a/puppet/modules/redmine/templates/cron.erb
+++ b/puppet/modules/redmine/templates/cron.erb
@@ -1,2 +1,2 @@
 @hourly <%= @username %> /usr/local/bin/redmine_repos.sh <%= @app_root %> <%= @data_dir %>
-@daily  <%= @username %> pg_dump <%= @dbname %> | gzip > <%= @data_dir %>/redmine.backup.sql.gz
+@daily  <%= @username %> pg_dump <%= @db_name %> | gzip > <%= @data_dir %>/redmine.backup.sql.gz
