use https for ci. and projects.

--- a/puppet/modules/slave/templates/test_pull_requests_bastion.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_bastion.json.erb
@@ -1,8 +1,8 @@
 {
   "proxy_host": null,
   "proxy_port": null,
-  "jenkins_host": "http://ci.theforeman.org/",
-  "jenkins_url": "http://ci.theforeman.org/",
+  "jenkins_host": "https://ci.theforeman.org/",
+  "jenkins_url": "https://ci.theforeman.org/",
   "hub_config": "~/.config/hub",
   "github_user": "Katello",
   "bot_github_user": "<%= @github_user -%>",
