--- a/puppet/modules/slave/templates/test_pull_requests_foreman_digitalocean.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_digitalocean.json.erb
@@ -21,6 +21,7 @@
                 "*": {
                     "jenkins_job_name": "test_plugin_pull_request",
                     "downstream_job_name": "test_plugin_foreman_digitalocean_master",
+                    "require_downstream_stability": false,
                     "build_token": "<%= @jenkins_build_token -%>",
                     "addtl_jenkins_params": {
                         "foreman-digitalocean": {
