--- a/puppet/modules/slave/templates/test_pull_requests_foreman_monitoring.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_monitoring.json.erb
@@ -20,6 +20,7 @@
             "branches": {
                 "*": {
                     "jenkins_job_name": "test_plugin_pull_request",
+                    "require_downstream_stability": false,
                     "downstream_job_name": "test_plugin_foreman_monitoring_master",
                     "build_token": "<%= @jenkins_build_token -%>",
                     "addtl_jenkins_params": {
