Update web class for 1.19 manual
Also, redirect next version to nightly manual

--- a/puppet/modules/web/templates/web.conf.erb
+++ b/puppet/modules/web/templates/web.conf.erb
@@ -13,4 +13,4 @@ RewriteRule   ^/?(.*) https://%{SERVER_NAME}/$1 [R=301,L]
 <% end -%>
 
 RewriteRule   ^/manuals/latest(.*) /manuals/<%= @stable -%>$1 [R,L]
-RewriteRule   ^/manuals/<%= @next %>(.*) /manuals/<%= @latest -%>$1 [R,L]
+RewriteRule   ^/manuals/<%= @next %>(.*) /manuals/nightly$1 [R,L]
