--- a/puppet/modules/web/templates/web.conf.erb
+++ b/puppet/modules/web/templates/web.conf.erb
@@ -14,3 +14,6 @@ RewriteRule   ^/?(.*) https://%{SERVER_NAME}/$1 [R=301,L]
 
 RewriteRule   ^/manuals/latest(.*) /manuals/<%= @stable -%>$1 [R,L]
 RewriteRule   ^/manuals/<%= @next %>(.*) /manuals/nightly$1 [R,L]
+
+# Handle deleted content (manuals etc) in a nice way with a custom page
+ErrorDocument 404 /404.html
