make awstats server its icons properly

--- a/puppet/modules/awstats/templates/awstats.conf.erb
+++ b/puppet/modules/awstats/templates/awstats.conf.erb
@@ -29,6 +29,8 @@ HostAliases="localhost 127.0.0.1 <%= @name %>.theforeman.org"
 # Data dir for storing information between executions
 DirData="/var/lib/awstats/<%= @name %>"
 
+DirIcons="/awstats/icon"
+
 # OPTIONAL Config
 
 # Ignore localhost trafic
