--- a/puppet/modules/web/templates/debugs.conf.erb
+++ b/puppet/modules/web/templates/debugs.conf.erb
@@ -11,3 +11,6 @@
   Order Allow,Deny
   Allow from all
 </Location>
+
+# For AWStats icons
+Alias "/awstats/icon/" "/usr/share/awstats/wwwroot/icon/"
