--- a/puppet/modules/freight/templates/rsync_main.erb
+++ b/puppet/modules/freight/templates/rsync_main.erb
@@ -40,7 +40,7 @@ if [[ `echo "${SSH_ORIGINAL_COMMAND}" | awk '{ print $NF }'` =~ ^rsync_cache/.* 
   # Publish the debs
   freight-cache -c <%= @home %>/freight.conf -v apt/$DISTRO
   # Cleanup - no need to keep the debs
-  find <%= @home %>/rsync_cache/$DISTRO/$REPO -iname '*.deb' -delete
+  find <%= @home %>/rsync_cache/$DISTRO/$REPO -iname '*.deb' -delete || true
 fi
 ;;
 deploy*)
