update foreman key

--- a/puppet/modules/slave/templates/pbuilder_f70.erb
+++ b/puppet/modules/slave/templates/pbuilder_f70.erb
@@ -136,18 +136,18 @@ wfWxWMq8tY+TuPBCMcEXSZCS68CBuy6vnE+qzokI53N4RxJLMsddohzJKHrI+RRP
 YOsWypn+QFdfDiz0abC8GdIUx/U42gm4JiVBUh+6qUQDYcsPcC7AfFBmXwARAQAB
 tD5Gb3JlbWFuIEF1dG9tYXRpYyBTaWduaW5nIEtleSAoMjAxNikgPHBhY2thZ2Vz
 QHRoZWZvcmVtYW4ub3JnPokCPgQTAQIAKAIbAwYLCQgHAwIGFQgCCQoLBBYCAwEC
-HgECF4AFAlq0+iUFCQlRMkwACgkQb4YAuVYyePa4rhAAzcgzbdbYhvfMjOmjKesK
-stMR35U9x42Vvvw9rW9qP3ytpFTeX08I4X5FSWhE+F/fzbGqQh8Xr4oLucv2PZqE
-O+bvKX3WcUpfucruEBKvYNdYCgbv1X8CfufnO6j2JnyIQTqbzLsWw9ZPSfv29bze
-lxpkHZqs5S7QqnujvZXSLtFVsLa+Bds3nzbF3tnJxdtHRT8/zWUQOzHnYcxFPlFc
-UxK12rtSygQv+X47CefVPkYeHLHrO5xvP7mdnQD8BERcIzndScKSalONjTxogZfB
-FmKrYVCVokQt0xURPZJ8jqIrovW4qvGSaGAFOuC8ECfMGEQ8x/xnsv0GWmaax8Sf
-Oz9q5LJcVOSWBwVJWn4TE7/l14SBLa4l6gK1OjYWB9//9jLovFSTouO0oq+fBeSM
-NEIdHo9DL8sISXl8uJFY49UzzWGb3A23xnxzaJGtftEFWROf4JNdgNYXhPN4wRFo
-4GyFhfAEsQi3RE/8oMHAe75Ec0uFlf1LhDTOVRVqoKLnazLUFgGRzskjgs03QmrB
-LCUhWiZCVXf/vsYQAdj2IKG/NunFymuSeu6sbJeiumYOytQUrXfDiZS+nSPp0PRP
-zhcEQuc/CMRCxro14EFoGKRBoP1rUPAnOtWJeV4VnWj2gTF7gpoMhy8t2eZcjh9C
-5Wmwk8HhSn7i0/7Nwlx/yK65Ag0EVwdiWQEQALJUNPo0bqmCsdPqp03ZlLQmuGNl
+HgECF4AFAmBLaU0FCQslOnQACgkQb4YAuVYyePaOiRAAqBtJ/eeA33sWoAqlH4CN
+dyC9P5icGnUxo1hYQlIaSh7w59p74ro3iqpwZH151CXET0zTXfICRQjufa1JeA9F
+RGq/5O8lOD22j4axRZ3MhYn/jwvhjEjmlasCVNigc7VMaWgzRpweWF/oX2alGF71
+JpDaHUfHIba4DzuNv6PD+H7GEl9ZmMnqhJF5PoCAVj1d+J9z+IXuZMqAWU5h91b3
+lJQq/Xfpi5ReykrsdmYOxiveJdZtAP2gXC0Sq98hDt7BhSoE8QJlRY9jBjgRPyrY
+cguO9KaTnCTn5XytJ+3ZBjSYVsVPxVYAur06qvEeIa3cp2UTfDShvdGGn6O6zf7n
+jAJh1iPe/91WhdKv5/67txFb6mdN/4fXRpWUfETbFdffwNBsENS4E8WqTWLPBOw+
+9rMlyoeSluI04es8Edc/Itkfu19Z1i2/YDLrThhX4o3dj1oAM0V3MxwOMw1S5hm+
+UJ6ClMiV1EiHyBAK65pKn6y1IxTJbHdoxNDqBrRYeSCXXVFPxPRofyPAj8YIAGd3
+ijlnY1PJyMhnGnMzFDQ8Vp3IUdkxteWa+DrcHe5NoLvl2wtSQ4TdSv/niQpVWddo
+izEji5VcRcP3AmKWvcH4UOQdLWH3NsHAqKurk39KnLOh+F5iy5X5rWn7T7ue8YWl
++7s2SpY1JLlegiP4aEZ6RRm5Ag0EVwdiWQEQALJUNPo0bqmCsdPqp03ZlLQmuGNl
 ua7jJzgvd2vCZrCW7ucFD3rxE+MkpKzE+6t8XslnUwAqW8TUG7i2QKg2JivS2ZU0
 2Fj2i8/fOHp1mWLUJIpRT8UmW3AiMosN2K5vsCO9euwepMIrLnv3+3kKxu5i/ayy
 nCkSo0BX2ETXvnflm1MO38DhHXIaOmMAUmVVJjsNVkX7UQSDLxAqiSCzPGGSWYiW
@@ -158,19 +158,19 @@ Q2xuU8plaUcIKM0B4qGEqdlDE+ZwsiN0WAmW/R3Hwg0sfIiDRr8PcYMReRK8RzR9
 ej6AHuLKWmirigfH4lUmsA9sylf4q1dmPA1kNv5l1BnDNmnx0Wlq9qTe50LNQh59
 NPLf1qqyCHwGDNQX/OrwYDRojA7dNrwGy2NGWBfhbt8T1XbAfqo5b7rae0g1pRUN
 pJDMfGqlk/kXtrrmJSIuQOrwGn9KaJCk2DKX/STPY16G9neaQ6f1sOJJ24RskOhO
-C6LJCGcDPPoscsVXABEBAAGJAiUEGAECAA8CGwwFAlq0+jcFCQlRMl4ACgkQb4YA
-uVYyePb0fA//XR2rD4wuEF+CDoIA98rY55bE/fh3aKidmroaBzbXaeIDB8Uccpq3
-kqM0OHCNA4ni4c/OoVXoQIn9e1TDf8WG2BaU1i5ezI6/EBQzYOsjrO26XSK6kuS7
-wsZA9uWZc2T/wgHGFmypi50j4+OBLclqRwOffX6Rkn0xSd8/gDHXU0rM9psyszC4
-6i6tBlpvZ2pFLwhJ5x5kcAWlnf7QEf1uFGVIIQcMysCorn7XXnR7dTbzv1RVFjS9
-GS4B1FVCTFccy2l/BP3nVZH8Y2Osd2Pwh+4oGm9ufTTtJPs4sZvmkMeh9jHacb/n
-/lMBMbJzG/lPXIYonDG5+jWpFcqpzknH49zTEfCWyk3mvdr/JYNvz6SZN2Pe/Mrr
-58/ufpNfAE+ZmokDChytkGqEx3LpncCxeWRPtPpkFo1+N1huiEFcRnaeGp5S3lf9
-1JQ8EzPBmPc1kNPoEPwBJ8uxsYRLD34acAjdVDPDZOyhjdNb9UkWHeMBH4FDk9PU
-Hah08ZA1dyzi/Hg7NIS21kNSAF9xhCShIjY9hZO48PcqCjmw3T5GDQXzTX5FF4YA
-UUEiAhoEB1dVP2W0Kxh0qcpA9FZep2zvQR/flh0EjZBUEYtoKXtf+2dQLcgvlGaE
-twMXMp6i7u39O61rZuvmfQls3/RYhvS0wXQu143WDD51W2WzrgVza4A=
-=J97K
+C6LJCGcDPPoscsVXABEBAAGJAiUEGAECAA8CGwwFAmBLacAFCQslOucACgkQb4YA
+uVYyePYdWg//UKWo1a+2m3EOscOQYtTBH6rNfSIecgnWkCQuGnZuODK1c3vxGQL6
+xkY9+1zMjLYUVAjG2h3Hd7WMU5agvemyTZf1gbdwSgVdt1y5NVWsBPKXoyn2vbm8
+kE/gECP6+8gJSatWI931e3R+m93HqN3cCGw1WUVXuDA65TsgPuoDxAf1VoB1Ewti
+Qa4Ni8lKzRQn3qc4LsHEn2XfVmebR7cWAtGCLbHCpqE3ZPRi1RnqWJ73NsLX2eq4
+gVoqwchrqbOf1OICPr0vlkICTG8ydcy/3urziJdYQivEXK5USd27c5kK8p5YU6It
+DOGPHe045uwpChLRyslY6qYm0WlhBgWIAFr8dzhAyOhuWz3I6Iw43DACLa+co+WR
+FZ33FqYTbl+F5x+x983alzXG0+8/eJ0fdcEOPj+C/GbJaKwXjpQk3l7OpUwLIQNy
+nFVRXYaD1g2i6pHgWhhqFlWqo6fHrbD2Hzm9HCNS5eWiB/JGFZKyGBpBMh22/k6O
+bIZ8SVgErE+AwvAE7HCnr+Pun/Iblrlb6fLC6J4WHumvmAIPLznIViUekC0jvEym
+kNo8dY3LUn8NlQJ/qtBZDNf/OvP5LjiHPJdLlTyc+eZDGIszkPwLO/rjUfJGaD20
+1vYLOIp+VREV4ODtMQfkLv7W+ynhzAgOZJBiJWU0CwLbnWza4D+yIIc=
+=Fyc2
 -----END PGP PUBLIC KEY BLOCK-----
 EOF
 
