use cat, not echo to load the key
the 🐈 is always better!

--- a/puppet/modules/slave/templates/pbuilder_f70.erb
+++ b/puppet/modules/slave/templates/pbuilder_f70.erb
@@ -115,7 +115,7 @@ sCsZbchgliqGcI1l2En62+6pI2x5XQqqiJ7+
 -----END PGP PUBLIC KEY BLOCK-----
 EOF
 
-echo <<EOF | apt-key add -
+cat <<EOF | apt-key add -
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQINBFyrv4oBEADhL8iyDPZ+GWN7L+A8dpEpggglxTtL7qYNyN5Uga2j0cusDdOD
