add new (2021) key to pbuilder

--- a/puppet/modules/slave/templates/pbuilder_f70.erb
+++ b/puppet/modules/slave/templates/pbuilder_f70.erb
@@ -207,5 +207,37 @@ kNo8dY3LUn8NlQJ/qtBZDNf/OvP5LjiHPJdLlTyc+eZDGIszkPwLO/rjUfJGaD20
 -----END PGP PUBLIC KEY BLOCK-----
 EOF
 
+cat <<EOF | apt-key add -
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+mQINBGD6Y/UBEADOhGOD74lvHdUAew1cHjAUTbopfoXvFvo5jXs4ra3IblnzPEOJ
+yOZr/Zt9Guf2w0F/1/4U5ppgqf3YjwKLCpIYM6JV/N2c+zBaQmQEYRFGJNzHRt/i
+v4cL67FRF2lxFNldW26/MFDF2ax/LD3qglDLgqgaWEA/2lg6XHBFskeQDToSdx4R
+VKP6svCkgNGcxXZMKwHa+/ruYHCu4chfZPGJHLWB351zchTwnw6k7F2ersXvAM4i
+YaN4NHv8C2uY2ku8v3uX0H8wC2nXEDBU3uHBun7E/lLABNJpyqAFQrioRAOAn0r7
+AYGLN2s4Ke6BMn1uVHarl3MN4kmPqkl7rG0q+bwv9e/D//lKGo6bJRZSeeFMpHiG
+kvgUIHoGBOKSbYwn0UBXXt3VHBFp/kaUOKlWYYEs/XHUBZ7fVXlD7UpjMMfNXXGv
+QjW/zRjZ5tIMBqMYibxHUExcRRytxSNX9JmVLaE2Hof2lQcEEzmVaSzpWT9/bsUx
+DGfwew5gptDDEKH+3z+heJ4b9/vwjIhdLOczkFSFAXamZfkGWjsrgXWpbT7+tNg6
+8LPQtBpo8mgsE7clTZFKH/fF+Ng2Cy1M5zW3kshYuwPGxaQPnDq8HXCIpWA3aRRd
+AqJ9aAFCG2t4CpcjMIqfckbxqI77nbZEX82jCIceu2fpruvOjC4PtDsmdQARAQAB
+tD5Gb3JlbWFuIEF1dG9tYXRpYyBTaWduaW5nIEtleSAoMjAyMSkgPHBhY2thZ2Vz
+QHRoZWZvcmVtYW4ub3JnPokCVAQTAQgAPhYhBFt8PlpzW8tNYVgp3AvdqZH9eqyK
+BQJg+mP1AhsvBQkDwmcABQsJCAcCBhUKCQgLAgQWAgMBAh4BAheAAAoJEAvdqZH9
+eqyKn44P/iVhpU8u8SXWV1dBtQsbbbVEoRwd+iCr5+V6Wws1xtDMYVhJ4ANrO8mH
+mb+IJ0jx6fqCZB1kZOt7T3DV32+6b3FH5ncI9wsCYmggezDGCZ0lRLlZChbLm44Z
+uv8IJYEexPTICW+soB6+SUBBK3s9XQ8WbNtJmhaDLxRIGUqSrmr5+u62hcc2MnIO
+SQ3HCgKkqM/o2E2mHQ06e/1JUxgbPY7vne3fOtcZFyhn/AHMkyG6zrGdNZxvAbLL
+PMfTYswBMJI/FVXeXtkNN4Y9OZJz3MkZvhwBe21diBuxYioXupJHQFETdvFVuLLc
+AqrRQDNQCcRUrFzto+R118c/jtwlUHY7jBSCA7byuZIlxsWaLcGc2LstLuU26cNn
+gqyRCXPSX2XZaSzIJT0xVejPSYG9dLzIbY+5L4P47ezUkgg1zupeEzvTLa2dQDl2
+rUSNMaN67g2K6KqEDx9Kql7msxJKiGKqxOm62unceXEez581fBhxbkG/QNjfgo4f
+orrpySxAO2H3m7kyVlRmfv1ThYFCLyGUg+KOwPBh28+rNyJd6D1MC2ZwsdL7t8Fz
+NgXfwHCn2Sgjt0fM4ppPvfM14aSM+N/r164LYLEZK6nYYKvDOo0awA6mYcTTyWIE
+YS8wZybtClEkdP0+pCjMp92Da9i92NCa6MljZMibGzmTbABEPmpd
+=cPp9
+-----END PGP PUBLIC KEY BLOCK-----
+EOF
+
 # Update apt
 /usr/bin/apt-get update
