Fixes #33444 - drop old (2016) debian signing key

--- a/puppet/modules/freight/templates/freight.conf.erb
+++ b/puppet/modules/freight/templates/freight.conf.erb
@@ -12,8 +12,8 @@ LABEL="TheForeman"
 # GPG key to use to sign repositories.  This is required by the `apt`
 # repository provider.  Use `gpg --gen-key` (see `gpg`(1) for more
 # details) to generate a key and put its email address here.
-#     2016     2021
-GPG="563278F6 FD7AAC8A"
+#     2021
+GPG="FD7AAC8A"
 
 # Follow symlinks in VARLIB
 SYMLINKS="on"
